# faf-shim

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  TODO.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
api/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml  seed.py
api/alembic/: env.py
api/alembic/versions/: 001_initial_schema.py  002_add_forwarded_payload.py
api/app/: app_config.py  auth.py  cache.py  cleanup.py  config.py  forwarder.py  logger.py  main.py  rate_limit.py  signing.py
api/app/db/: __init__.py  engine.py  models.py
api/app/routers/: auth.py  config.py  dlq.py  metrics.py  shims.py  webhooks.py
api/tests/: conftest.py  test_body_size.py  test_cleanup.py  test_config.py  test_cors.py  test_dlq.py  test_export_import.py  test_forwarder.py  test_log_retention.py  test_logs.py  test_metrics.py  test_rate_limit.py  test_rules.py  test_templates.py  test_updates.py  test_webhooks.py
app/: auth.py  cache.py  forwarder.py  main.py  signing.py
app/db/: __init__.py  engine.py  models.py
app/routers/: auth.py  shims.py  webhooks.py
client/: .env.example  Dockerfile  nginx.conf  package.json
client/src/components/: AppConfig.tsx  CodeEditor.tsx  DLQList.tsx  MetricsDashboard.tsx  ShimDetail.tsx  ShimLogs.tsx  ShimsList.tsx
client/src/layouts/: AppLayout.astro  BaseLayout.astro
tests/: conftest.py  test_auth.py  test_forwarder.py  test_rules.py  test_shim_test.py  test_shims.py  test_variables.py  test_webhooks.py
(+13 files in other folders)
