[project]
name = "faf-shim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.135.1",
    "sqlmodel>=0.0.37",
    "uvicorn[standard]>=0.41.0",
]

[project.scripts]
faf-shim = "main:main"
